@@ -18,6 +18,7 @@ Cacti CHANGELOG
 -bug#0001160: In Suggested Values editor, name and field are reversed. Include column headers
 -bug#0001166: Installer does not properly handle disabled guest_user conversion
 -bug#0001174: Unidentified index warning
+-bug#0001175: Hide hosts in Graph Permissions that you already have access to
 -bug#0001176: Problem validating IPv6 addresses
 -bug#0001180: Graph Export to CSV failed by using IE 6 SP2
 -bug#0001182: Subdirectories are not secure and allow browsing
