@@ -16,6 +16,7 @@ Cacti CHANGELOG
 -bug#0001153: Undefined variable: local_graph_id in graphs.php on line 201 
 -bug#0001166: Installer does not properly handle disabled guest_user conversion
 -bug#0001174: Unidentified index warning
+-bug#0001175: Hide hosts in Graph Permissions that you already have access to
 -bug#0001176: Problem validating IPv6 addresses
 -bug#0001191: Faulty IP address validation by ping.php script
 -bug#0001180: Graph Export to CSV failed by using IE 6 SP2
